--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Ronnie Nillo Portfolio",
+  "short_name": "Ronnie App",
   "name": "Ronnie Nillo",
   "start_url": ".",
   "display": "standalone",
